--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -725,7 +725,7 @@ function displayGrade() {
 
 
 
-
+<div class="display">
 <input type="button" value="submit" onclick="check1(), check2(), check3(), check4(), check5(), check6(), check7(), check8(), check9(), check10(), check11(), check12(), check13(), check14(), check15(), check16(), check17(), check18(), check19(), check20()">
 
 <br>
@@ -733,9 +733,11 @@ function displayGrade() {
 <label id="ffname"></label>
 <label> 's Final Score is: </label>
 <label id="grade"></label>
-<label id="score"></label>
+<br>
+<label id="score">0</label>/20
 <br>
 <br>
+</div>
 </div>
 </body>
 </html>
