--- a/madlabs/madlibs.html
+++ b/madlabs/madlibs.html
@@ -9,6 +9,10 @@
         <div class="header">
             <img src="libs.jpg">
         </div>
+    <div class="story1">
+        <h1>
+            Online Kids Mad Libs About
+        </h1>
     </body>
 
 
