--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -436,6 +436,39 @@ function displayGrade() {
   }
 }
 
+
+
+const submitButton = document.getElementById('submitButton');
+
+submitButton.addEventListener('click', function() {
+
+  check1();
+  check2();
+  check3();
+  check4();
+  check5();
+  check6();
+  check7();
+  check8();
+  check9();
+  check10();
+  check11();
+  check12();
+  check13();
+  check14();
+  check15();
+  check16();
+  check17();
+  check18();
+  check19();
+  check20();
+
+  this.disabled = true;
+});
+
+
+
+
 </script>
 
 <div class="body">
@@ -726,7 +759,7 @@ function displayGrade() {
 
 
 <div class="display">
-<input type="button" value="submit" onclick="check1(), check2(), check3(), check4(), check5(), check6(), check7(), check8(), check9(), check10(), check11(), check12(), check13(), check14(), check15(), check16(), check17(), check18(), check19(), check20()">
+<input type="button" id="submitButton" value="submit" onclick="check1(), check2(), check3(), check4(), check5(), check6(), check7(), check8(), check9(), check10(), check11(), check12(), check13(), check14(), check15(), check16(), check17(), check18(), check19(), check20()">
 
 <br>
 <br>
