--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -31,6 +31,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check2 () {
@@ -51,7 +57,14 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
 }
+
+}
+
 
 function check3 () {
 
@@ -71,7 +84,14 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
 }
+
+}
+
 
 function check4 () {
 
@@ -91,7 +111,14 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
 }
+
+}
+
 
 function check5 () {
 
@@ -110,8 +137,14 @@ document.getElementById("msg5").innerHTML="Congratulation! Correct Answer"; scor
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
 
 }
+
+}
+
 
 function check6 () {
 
@@ -131,7 +164,14 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
 }
+
+}
+
 
 function check7 () {
 
@@ -150,6 +190,12 @@ document.getElementById("msg7").innerHTML="Congratulation! Correct Answer"; scor
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -171,6 +217,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check9 () {
@@ -190,6 +242,12 @@ document.getElementById("msg9").innerHTML="Congratulation! Correct Answer"; scor
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -211,6 +269,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check11 () {
@@ -230,6 +294,12 @@ document.getElementById("msg11").innerHTML="Congratulation! Correct Answer"; sco
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -251,6 +321,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check13 () {
@@ -270,6 +346,12 @@ document.getElementById("msg13").innerHTML="Congratulation! Correct Answer"; sco
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -291,6 +373,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check15 () {
@@ -310,6 +398,12 @@ document.getElementById("msg15").innerHTML="Congratulation! Correct Answer"; sco
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -331,6 +425,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check17 () {
@@ -350,6 +450,12 @@ document.getElementById("msg17").innerHTML="Congratulation! Correct Answer"; sco
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -371,6 +477,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check19 () {
@@ -391,6 +503,12 @@ document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
 
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
+
 }
 
 function check20 () {
@@ -410,6 +528,12 @@ document.getElementById("msg20").innerHTML="Congratulation! Correct Answer"; sco
 document.getElementById("score"). innerHTML=score;}
 
 displayGrade();
+
+if (!buttonClicked) {
+    buttonClicked = true;
+    document.getElementById("submitButton").disabled = true;
+
+}
 
 }
 
@@ -435,39 +559,6 @@ function displayGrade() {
     document.getElementById("grade").innerHTML = "Your grade: Exceptional";
   }
 }
-
-
-
-const submitButton = document.getElementById('submitButton');
-
-submitButton.addEventListener('click', function() {
-
-  check1();
-  check2();
-  check3();
-  check4();
-  check5();
-  check6();
-  check7();
-  check8();
-  check9();
-  check10();
-  check11();
-  check12();
-  check13();
-  check14();
-  check15();
-  check16();
-  check17();
-  check18();
-  check19();
-  check20();
-
-  this.disabled = true;
-});
-
-
-
 
 </script>
 
@@ -759,7 +850,7 @@ submitButton.addEventListener('click', function() {
 
 
 <div class="display">
-<input type="button" id="submitButton" value="submit" onclick="check1(), check2(), check3(), check4(), check5(), check6(), check7(), check8(), check9(), check10(), check11(), check12(), check13(), check14(), check15(), check16(), check17(), check18(), check19(), check20()">
+<input type="button" id="submitButton"  value="submit" onclick="check1(), check2(), check3(), check4(), check5(), check6(), check7(), check8(), check9(), check10(), check11(), check12(), check13(), check14(), check15(), check16(), check17(), check18(), check19(), check20()">
 
 <br>
 <br>
