--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -864,4 +864,31 @@ function displayGrade() {
 </div>
 </div>
 </body>
+
+
+
+
+
+
+<style>
+    body{
+    margin: 0%;
+    background-color: bisque;
+}
+
+
+.body{
+    margin: auto;
+    padding: 5px 40% 5px 40%;
+}
+
+.display{
+    text-align: center;
+    margin: auto;
+}
+</style>
+
+
+
+
 </html>
