--- a/madlabs/madlibs.html
+++ b/madlabs/madlibs.html
@@ -13,13 +13,83 @@
         <h1>
             Online Kids Mad Libs About Pizza Order
         </h1>
-        
+        <br>
+        Once upon a time, there was a <label id="person1">Person</label> who was feeling particularly <label id="adjective1">Adjective</label> one day. They decided to order from their favorite <label id="restaurant1">Restaurant</label>. After placing the order, they eagerly awaited the delivery of their delicious <label id="food1">Food</label>. AFter a/an <label id="time1"> Time </label> they felt <label id="feeling1"> Feeling </label>.
+        <br>
+        <br>
+
+        <div class="story1insert">
+            Person
+            <input id="s1person" type="text">
+            <br>
+            Adjective
+            <input id="s1adjective" type="text">
+            <br>
+            Restaurant
+            <input id="s1restaurant" type="text">
+            <br>
+            Food
+            <input id="s1food" type="text">
+            <br>
+            Time (hour/half an hour)
+            <input id="s1time" type="text">
+            <br>
+            Feeling
+            <input id="s1feeling" type="text">
+            <br>
+            Person
+            <input id="s1" type="text">
+            <br>
+            Person
+            <input id="s1" type="text">
+            <br>
+            </div>
+        </div>
+        <br>
+        <input type="submit" onclick="s1()">
     </body>
 
 
 
+<script>
+function s1(){
+
+let a = document.getElementById('s1person').value;
+document.getElementById('person1').innerText=a;
+
+let a = document.getElementById('s1adjective').value;
+document.getElementById('adjective1').innerText=a;
+
+let a = document.getElementById('s1restaurant').value;
+document.getElementById('restaurant1').innerText=a;
+
+let a = document.getElementById('s1food').value;
+document.getElementById('food1').innerText=a;
+
+let a = document.getElementById('s1time').value;
+document.getElementById('time1').innerText=a;
+
+let a = document.getElementById('s1feeling').value;
+document.getElementById('feeling1').innerText=a;
+
+let a = document.getElementById('').value;
+document.getElementById('').innerText=a;
+
+let a = document.getElementById('').value;
+document.getElementById('').innerText=a;
+}
+</script>
+
+<style>
+body{
+    margin: 0%;
+}
 
 
-
-
+.header{
+    text-align: center;
+    background: #000034;
+    padding: 30px;
+}
+</style>
 </html>
