--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -4,9 +4,10 @@
             Hittites Empire
         </title>
     </head>
+    <link rel="stylesheet" href="Hittites.css">
     <body>
         <div class="head">
-            <img class="logo" src="logo.png">
+            <img class="logo" src="h empire.png">
             <h1 class="text">
             International Women's Day
             </h1>
