--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -4,25 +4,35 @@
             Hittites Empire
         </title>
     </head>
+
     <link rel="stylesheet" href="Hittites.css">
     <script src="Hetties.js"></script>
+
     <body>
+        <div class="top">
         <div class="head">
-            <img class="logo" src="h empire.png">
+            <img class="logo" src="empire.png">
             <h1 class="text">
             Hittites Empire
             </h1>
             </div>
-            
+
             <nav class="nav">
                 <ul id="navMenu">
                     <li><a href="#">Home</a></li>
+                    <li><a href="#">Religion</a></li>
+                    <li><a href="#">Language</a></li>
                     <li><a href="#">History</a></li>
-                    <li><a href="#">Culture</a></li>
-                    <li><a href="#">Art</a></li>
-                    <li><a href="#">Architecture</a></li>
+                    <li><a href="#">Architecture & Art</a></li>
+                    <li><a href="#">Geography</a></li>
+                    <li><a href="#">Economy</a></li>
+                    <li><a href="#">Quiz</a></li>
                 </ul>
             </nav>
-            
+            </div>
+
+            <div class="body">
+              The Hitties has a rich history, with intriguing architecture and art. 
+           </div>
     </body>
 </html>
