--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -32,6 +32,15 @@
             </div>
 
             <div class="body">
+                <div class="hero">
+                    <div class="hero-content">
+                        <h1>Explore the Hittites Empire</h1>
+                        <p>Discover the rich history and culture of the ancient Anatolian civilization.</p>
+                    </div>
+                </div>
+                
+                <br>
+                <br>
                 The Hittites were an ancient Anatolian Indo-European civilization that flourished in the Bronze Age, centered in what is now modern-day Turkey and Syria. They established their kingdom around 1800 BC, with their capital at Hattusa (modern-day Boğazkale) in north-central Anatolia.
                 <br>
                 <br>
