--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -32,8 +32,8 @@
             </div>
 
             <div class="body">
-                <div class="hero">
-                    <div class="hero-content">
+                <div class="hook">
+                    <div class="hook-content">
                         <h1>Explore the Hittites Empire</h1>
                         <p>Discover the rich history and culture of the ancient Anatolian civilization.</p>
                     </div>
