--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -12,9 +12,12 @@
         <div class="top">
         <div class="head">
             <img class="logo" src="empire.png">
-            <h1 class="text">
+            <div class="text">
+            <div class="HE">
             Hittites Empire
-            </h1>
+            </div>
+            A Lost Empire
+            </div>
 
             <nav class="nav">
                 <ul id="navMenu">
