--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -21,8 +21,8 @@
 
             <nav class="nav">
                 <ul id="navMenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Religion</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/Hittites.html">Home</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/Religion.html">Religion</a></li>
                     <li><a href="#">Language</a></li>
                     <li><a href="#">Law</a></li>
                     <li><a href="#">Architecture & Art</a></li>
