--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -37,7 +37,7 @@
             <div class="body">
                 <div class="hook">
                     <div class="hook-content">
-                        <h1>Hittites Religion</h1>
+                        <h1>Religion</h1>
                         <p>The ancient Anatolian civilization rich religion.</p>
                     </div>
                 </div>
