--- a/Final/language.html
+++ b/Final/language.html
@@ -18,8 +18,8 @@
             <nav class="nav">
                 <ul id="navMenu">
                     <li><a href="http://127.0.0.1:3000/Final/Hittites.html">Home</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Language.html">Language</a></li>
-                    <li><a href="#">Religion</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/Religion.html">Religion</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/language.html">Language</a></li>
                     <li><a href="#">Law</a></li>
                     <li><a href="#">Architecture & Art</a></li>
                     <li><a href="#">Geography</a></li>
