--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -16,8 +16,10 @@
             <div class="HE">
             Hittites Empire
             </div>
+            <div class="emp">
             A Lost Empire
             </div>
+        </div>
 
             <nav class="nav">
                 <ul id="navMenu">
