--- a/Final/language.html
+++ b/Final/language.html
@@ -11,10 +11,13 @@
         <div class="head">
             <img class="logo" src="empire.png">
             <div class="text">
-            <div class="HE">Hittites Empire</div>
-            A Lost Empire
+            <div class="HE">Hittites Empire
             </div>
-
+            <div class="emp">
+                A Lost Empire
+                </div>
+            </div>
+            
             <nav class="nav">
                 <ul id="navMenu">
                     <li><a href="http://127.0.0.1:3000/Final/Hittites.html">Home</a></li>
