--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -46,28 +46,30 @@
                 
                 <br>
                 <br>
-                The Hittites were an ancient Anatolian Indo-European civilization that flourished in the Bronze Age, centered in what is now modern-day Turkey and Syria. They established their kingdom around 1800 BC, with their capital at Hattusa (modern-day Boğazkale) in north-central Anatolia.
+                    The Hittites had a polytheistic religion, worshipping a pantheon of gods and goddesses. Some of the major deities in their religion included:
+                    <ul>
+                      <li>Teshub: The storm god, who was one of the most important deities in the Hittite pantheon. He was associated with thunder, lightning, and rain.</li>
+                      <li>Arinna: The sun goddess, who was the chief goddess and the consort of Teshub.</li>
+                      <li>Kamrusepas: The god of war and protection.</li>
+                      <li>Hepat: The goddess of fertility and grain.</li>
+                      <li>Shaushka: The god of the sun and war.</li>
+                    </ul>
+                    </ul>
                 <br>
                 <br>
-                At its peak, the Hittite Empire was a major power in the ancient Near East, controlling a vast territory that stretched across most of modern Turkey, Syria, and parts of the northern Levant. They had complex relationships with other major powers of the time, such as the New Kingdom of Egypt and the Assyrian Empire in Mesopotamia.
+                The Hittites also incorporated deities and religious practices from other cultures they encountered, such as the Hurrian and Mesopotamian civilizations. They had a complex system of rituals, festivals, and sacrifices to honor their gods.
                 <br>
                 <br>
-                The Hittites are renowned for their advanced legal system, as evidenced by the Hittite laws, one of the oldest surviving written legal codes. They were also skilled in architecture and art, with impressive fortified cities, rock-cut reliefs, and sculptures.
+                The religious practices of the Hittites were closely tied to the state and the ruling class. The king played a significant role in religious ceremonies and was considered to have a special relationship with the gods.
                 <br>
                 <br>
-                In terms of religion, the Hittites worshipped a pantheon of deities, including the storm god Teshub and the sun goddess Arinna. Their language, known as Hittite, was an Indo-European language written in cuneiform script.
+                The Hittites built temples and sanctuaries for their deities, and many of their religious practices revolved around these sacred spaces. They also had a class of priests and priestesses who performed rituals and maintained the religious traditions.
                 <br>
                 <br>
-                The Hittite Empire reached its peak under the reign of Suppiluliuma I (1344–1322 BC), who expanded the empire's territory through military conquests. He defeated the Mitanni kingdom, capturing their capital Washukanni and annexing their Syrian vassals. His son Piyassili was installed as the viceroy of Carchemish, solidifying Hittite control over Syria.
+                Overall, the Hittite religion was an integral part of their culture and played a significant role in their society, influencing various aspects of their daily life and governance.
                 <br>
                 <br>
-                However, after 1180 BC, the Hittite Empire began to disintegrate, fragmenting into several independent "Neo-Hittite" city-states that survived until the 8th century BC. The reasons for the empire's decline are not entirely clear, but it is believed that a combination of internal instability, external invasions, and environmental factors played a role.
-                <br>
-                <br>
-                Despite its eventual decline, the Hittites left a lasting legacy in the ancient Near East, influencing the cultures and civilizations that followed in the region.
-                <br>
-                <br>
-               <span class="wikipedia-link"><i class="fas fa-external-link-alt"></i> Information Gathered from: <a href="https://en.wikipedia.org/wiki/Hittites#" target="_blank">https://en.wikipedia.org/wiki/Hittites#</a></span>
+               <span class="wikipedia-link"><i class="fas fa-external-link-alt"></i> Information Gathered from: <a href="https://en.wikipedia.org/wiki/Hittite_mythology_and_religion" target="_blank">https://en.wikipedia.org/wiki/Hittite_mythology_and_religion</a></span>
                 </div>
                 
            </div>
