--- a/Final/language.html
+++ b/Final/language.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="body">
-                <div class="hook">
+                <div class="hookl">
                     <div class="hook-content">
                         <h1>Language</h1>
                         <p>The ancient Anatolian civilization's unique language.</p>
