--- a/Final/Opener.html
+++ b/Final/Opener.html
@@ -35,3 +35,5 @@
             </nav>
             </div>
             </div>
+
+            <video src="C:\Users\harkirat.jaswal\OneDrive - School District No. 36 (Surrey)\code\bghopen.gif"></video>
