--- a/Final/Opener.html
+++ b/Final/Opener.html
@@ -36,4 +36,6 @@
             </div>
             </div>
 
-            <video src="C:\Users\harkirat.jaswal\OneDrive - School District No. 36 (Surrey)\code\bghopen.gif"></video>
+            <video autoplay loop muted class="vid">
+                <source src="bghopener.mp4" type="video/mp4">
+            </video>
