--- a/Final/Opener.html
+++ b/Final/Opener.html
@@ -39,3 +39,8 @@
             <video autoplay loop muted class="vid">
                 <source src="bghopener.mp4" type="video/mp4">
             </video>
+            <div class="video-overlay">
+                <h1>
+                Explore The Lost Hittites Empire
+                    </h1>
+            </div>
