--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="body">
-                <div class="hookr">
+                <div class="hook">
                     <div class="hook-content">
                         <h1>Religion</h1>
                         <p>The ancient Anatolian civilization rich religion.</p>
