--- a/Final/Hittites.html
+++ b/Final/Hittites.html
@@ -38,6 +38,9 @@
 
             <div class="body">
                 <div class="hook">
+                    <video autoplay loop muted>
+                        <source src="bghh.mp4" type="video/mp4">
+                    </video>
                     <div class="hook-content">
                         <h1>Explore the Hittites Empire</h1>
                         <p>Discover the rich history and culture of the ancient Anatolian civilization.</p>
