--- a/Final/Religion.html
+++ b/Final/Religion.html
@@ -38,6 +38,9 @@
 
             <div class="body">
                 <div class="hook">
+                    <video autoplay loop muted>
+                        <source src="bghr.mp4" type="video/mp4">
+                    </video>
                     <div class="hook-content">
                         <h1>Religion</h1>
                         <p>The ancient Anatolian civilization rich religion.</p>
