--- a/Final/language.html
+++ b/Final/language.html
@@ -35,6 +35,9 @@
 
             <div class="body">
                 <div class="hook">
+                    <video autoplay loop muted>
+                        <source src="bhgl.mp4" type="video/mp4">
+                    </video>
                     <div class="hook-content">
                         <h1>Language</h1>
                         <p>The ancient Anatolian civilization's unique language.</p>
