--- a/Final/Law.html
+++ b/Final/Law.html
@@ -23,7 +23,7 @@
                     <li><a href="http://127.0.0.1:3000/Final/Hittites.html">Home</a></li>
                     <li><a href="http://127.0.0.1:3000/Final/Religion.html">Religion</a></li>
                     <li><a href="http://127.0.0.1:3000/Final/language.html">Language</a></li>
-                    <li><a href="#">Law</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/Law.html">Law</a></li>
                     <li><a href="#">Architecture & Art</a></li>
                     <li><a href="#">Geography</a></li>
                     <li><a href="#">Economy</a></li>
