--- a/Final/Law.html
+++ b/Final/Law.html
@@ -39,32 +39,29 @@
                         <source src="bhgl.mp4" type="video/mp4">
                     </video>
                     <div class="hook-content">
-                        <h1>Language</h1>
-                        <p>The ancient Anatolian civilization's unique language.</p>
+                        <h1>Law</h1>
+                        <p>The ancient Anatolian civilization's advanced law</p>
                     </div>
                 </div>
                 
                 <br>
-                <br>
-                The Hittites spoke an Indo-European language known as Hittite, which was written using the cuneiform script. Hittite is the oldest recorded Indo-European language, with written records dating back to around 1650 BC.
-                <br>
-                <br>
-                The Hittite language was part of the Anatolian branch of the Indo-European language family, which also includes the extinct languages Luwian, Palaic, and Hieroglyphic Luwian. Hittite was spoken in central Anatolia (modern-day Turkey) and was the official language of the Hittite Empire.
-                <br>
-                <br>
-                Hittite texts were written on clay tablets using cuneiform script, which was originally developed for writing the Sumerian and Akkadian languages in Mesopotamia. The Hittites adapted the cuneiform script to write their own language, making modifications to represent the unique sounds and grammar of Hittite.
-                <br>
-                <br>
-                The Hittite language had a complex grammar, with a highly inflected system of nouns and verbs. It also had a unique feature called "consonant gradation," where certain consonants alternated between different forms based on the grammatical context.
-                <br>
-                <br>
-                The Hittite language was used for a wide range of purposes, including legal texts, religious rituals, historical records, and diplomatic correspondence. The Hittites also produced literary works, such as myths and legends, which provide valuable insights into their culture and beliefs.
-                <br>
-                <br>
-                After the fall of the Hittite Empire around 1180 BC, the Hittite language gradually fell out of use and was eventually replaced by other languages in the region, such as Luwian and Aramaic. However, the discovery and decipherment of Hittite texts in the late 19th and early 20th centuries have shed light on this ancient language and its significance in the history of Indo-European linguistics.
-                <br>
-                <br>
-               <span class="wikipedia-link"><i class="fas fa-external-link-alt"></i> Information Gathered from: <a href="https://en.wikipedia.org/wiki/Hittite_language" target="_blank">https://en.wikipedia.org/wiki/Hittite_language</a></span>
+                <p>The Hittites had a well-developed legal system, which is known from a collection of laws and legal texts that have been preserved on clay tablets. These texts provide insights into the Hittite society, its values, and its approach to justice.</p>
+
+<ul>
+  <li>Codified Laws: The Hittites had a codified system of laws, known as the "Hittite Laws" or the "Code of the Nesilim." This code was likely compiled during the reign of King Telipinu (around 1500 BC) and served as a basis for the legal system.</li>
+  <li>Punishment and Restitution: The Hittite laws prescribed various punishments for crimes, including fines, corporal punishment, and even the death penalty for serious offenses. However, the laws also allowed for restitution, where the offender could compensate the victim or their family for the harm caused.</li>
+  <li>Family and Inheritance Laws: The Hittite laws regulated family matters, such as marriage, divorce, and inheritance. They recognized the rights of both men and women in matters of property and inheritance, although men generally had more privileges.</li>
+  <li>Slavery and Labor Laws: The Hittite laws addressed the status and treatment of slaves, as well as the rights and obligations of free laborers and artisans.</li>
+  <li>Commercial and Contract Laws: The Hittites had laws governing commercial transactions, contracts, and property rights, reflecting their involvement in trade and economic activities.</li>
+  <li>Education and Religion Laws: The Hittite laws regulated education and religion, and the rights and obligations of the Hittite religious community.</li>
+  <li>Judicial System: The Hittite legal system had a hierarchical structure, with local courts and a higher court presided over by the king or his representatives. The king was considered the ultimate authority in matters of law and justice.</li>
+  <li>Influence on Other Cultures: The Hittite legal system influenced the legal traditions of neighboring cultures, such as the Hurrians and the Mesopotamians, and may have even had an impact on the later development of Greek and Roman law.</li>
+</ul>
+
+<p>The Hittite laws provide valuable insights into the social, economic, and cultural aspects of this ancient civilization. They demonstrate the Hittites' efforts to establish a structured legal system and maintain order within their society.</p>
+
+<p><span class="wikipedia-link"><i class="fas fa-external-link-alt"></i> Information Gathered from: <a href="https://en.wikipedia.org/wiki/Hittite_laws" target="_blank">https://en.wikipedia.org/wiki/Hittite_laws</a></span></p>
+
                 </div>
                 
            </div>
