--- a/Final/language.html
+++ b/Final/language.html
@@ -40,7 +40,7 @@
                     </video>
                     <div class="hook-content">
                         <h1>Language</h1>
-                        <p>The ancient Anatolian civilization's unique language.</p>
+                        <p>The ancient Anatolian civilization's unique language</p>
                     </div>
                 </div>
                 
