--- a/Final/Law.html
+++ b/Final/Law.html
@@ -36,7 +36,7 @@
             <div class="body">
                 <div class="hook">
                     <video autoplay loop muted>
-                        <source src="bhgl.mp4" type="video/mp4">
+                        <source src="bghll.mp4" type="video/mp4">
                     </video>
                     <div class="hook-content">
                         <h1>Law</h1>
