--- a/Final/Geography.html
+++ b/Final/Geography.html
@@ -42,8 +42,8 @@
                         <source src="bghaa.mp4" type="video/mp4">
                     </video>
                     <div class="hook-content">
-                        <h1>Architecture & Art</h1>
-                        <p>The ancient Anatolian civilization's Architecture & Art</p>
+                        <h1>Geography</h1>
+                        <p>The ancient Anatolian civilization's divine Land</p>
                     </div>
                 </div>
                 <br>
