--- a/Final/Law.html
+++ b/Final/Law.html
@@ -26,7 +26,7 @@
                     <li><a href="http://127.0.0.1:3000/Final/Law.html">Law</a></li>
                     <li><a href="http://127.0.0.1:3000/Final/Architecture & Art.html">Architecture & Art</a></li>
                     <li><a href="http://127.0.0.1:3000/Final/Geography.html">Geography</a></li>
-                    <li><a href="#">Economy</a></li>
+                    <li><a href="http://127.0.0.1:3000/Final/Economy.html">Economy</a></li>
                     <li><a href="#">Videos</a></li>
                 </ul>
             </nav>
