--- a/Final/Law.html
+++ b/Final/Law.html
@@ -20,14 +20,14 @@
             
             <nav class="nav">
                 <ul id="navMenu">
-                    <li><a href="http://127.0.0.1:3000/Final/Hittites.html">Home</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Religion.html">Religion</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/language.html">Language</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Law.html">Law</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Architecture & Art.html">Architecture & Art</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Geography.html">Geography</a></li>
-                    <li><a href="http://127.0.0.1:3000/Final/Economy.html">Economy</a></li>
-                    <li><a href="#">Videos</a></li>
+                    <li><a href="Hittites.html">Home</a></li>
+                    <li><a href="Religion.html">Religion</a></li>
+                    <li><a href="language.html">Language</a></li>
+                    <li><a href="Law.html">Law</a></li>
+                    <li><a href="Architecture & Art.html">Architecture & Art</a></li>
+                    <li><a href="Geography.html">Geography</a></li>
+                    <li><a href="Economy.html">Economy</a></li>
+                    <li><a href="Videos.html">Videos</a></li>
                 </ul>
             </nav>
             </div>
