--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -47,8 +47,18 @@
                     </div>
                 </div>
                 <br>
-               
-                
+                <br>
+                <br>
+                <div class="video-container">
+                    <video id="videoPlayer" width="800" height="450" controls>
+                        <source src="video1.mp4" type="video/mp4">
+                    </video>
+                    <div class="video-buttons">
+                        <button onclick="changeVideo('video1.mp4')">Video 1</button>
+                        <button onclick="changeVideo('video2.mp4')">Video 2</button>
+                        <button onclick="changeVideo('video3.mp4')">Video 3</button>
+                    </div>
+                </div>  
            </div>
     </body>
 </html>
