--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -57,6 +57,10 @@
                         <button onclick="changeVideo('video1.mp4')">Video 1</button>
                         <button onclick="changeVideo('video2.mp4')">Video 2</button>
                         <button onclick="changeVideo('video3.mp4')">Video 3</button>
+                        <button onclick="changeVideo('video4.mp4')">Video 4</button>
+                        <button onclick="changeVideo('video5.mp4')">Video 5</button>
+                        <button onclick="changeVideo('video6.mp4')">Video 6</button>
+                        <button onclick="changeVideo('video7.mp4')">Video 7</button>
                     </div>
                 </div>  
            </div>
