--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -54,7 +54,7 @@
                         <source src="video1.mp4" type="video/mp4">
                     </video>
                     <div class="video-buttons">
-                        <button onclick="changeVideo('video1.mp4')">Video 1</button>
+                        <button onclick="changeVideo('wwth.mp4')">Who were the Hittites?</button>
                         <button onclick="changeVideo('video2.mp4')">Video 2</button>
                         <button onclick="changeVideo('video3.mp4')">Video 3</button>
                         <button onclick="changeVideo('video4.mp4')">Video 4</button>
